--- a/index.html
+++ b/index.html
@@ -30,33 +30,29 @@
 
       </header>
       <section>
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>SmartBag - A World of Warcraft Addon by Wiefu of Muradin</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>SmarBag is an addon ment to help you keep your inventory organized. It does this by automatically moving items into bags for you. What it moves and where it moves it to is up to you. After downloading the addon once you login for the first time you'll see the SmartBag configuration screen. Simply pick what bag you'd like your gear sorted into and wether or not you'd like to automatically sell useless grey items when you open a vendor. That's it! You don't have to think about moving your gear around in your bags ever again!
+</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<p>You can always call up the setting window again if you want to change anything with the slash commands:</p>
+<pre><code>/sb
+or 
+/smartbag
 </code></pre>
+<p><strong>Note:</strong> Sorting happens whenever you leave combat or open a vendor. There are no messages when you leave combat that sorting has happened. I felt it was too spammy. I might add an option for leave combat messages at some point if people request it enough.</p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+Thanks for looking/downloading my addon, I'd love any feedback you may have.
 
-<h3>Designer Templates</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<h3>Features</h3>
 
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
+<li type="disc"><strong>Automatic grey item selling</strong>
+<li><strong>Automatic gear sorting</strong></li>
+<li><strong>Extra Sell Items</strong> - A list of items you wan to autmatically get sold when you open a vendor! Just drag and drop items to add them to the list. You can remove items from the list by clicking on them.
+<li><strong>Color coded feedback messages</strong>
+</li>
+</section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
